# skylark

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  get_deps.sh  skylark
shaders/: shader.vert
src/: main.cpp
