cmake_minimum_required (VERSION 2.6)
project (Skylark)
set(VULKAN_SDK "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "Vulkan SDK Root")
set(GLFW_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "GLFW Root")
set(GLM_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "GLM Root")
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
include_directories("${VULKAN_SDK}/Include")
include_directories(${GLM_DIR})
link_directories("${VULKAN_SDK}/Lib")
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/shaders/vert.spv ${CMAKE_CURRENT_BINARY_DIR}/shaders/vert.spv COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/shaders/frag.spv ${CMAKE_CURRENT_BINARY_DIR}/shaders/frag.spv COPYONLY)
add_subdirectory(${GLFW_DIR} ${PROJECT_NAME}/glfw)
add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
target_link_libraries(${PROJECT_NAME} glfw vulkan-1)