cmake_minimum_required(VERSION 2.8.12)
project(Skylark)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
set(GLFW_VULKAN_STATIC ON CACHE BOOL "" FORCE)
set(GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/glfw)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/glm)
add_executable(skylark src/main.cpp)
set_property(TARGET skylark PROPERTY CXX_STANDARD 17)

find_package(OpenGL REQUIRED)
find_package(Vulkan REQUIRED)
target_compile_definitions(skylark PRIVATE VK_USE_PLATFORM_WAYLAND_KHR)
target_include_directories(skylark PRIVATE Vulkan::Vulkan)

target_include_directories(skylark PUBLIC ${VULKAN_INCLUDE_DIR})
target_link_libraries(skylark glfw Vulkan::Vulkan glm ${OPENGL_gl_LIBRARY})