cmake_minimum_required(VERSION 2.8.12)
project(Skylark)
file(MAKE_DIRECTORY build)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/glfw)
add_executable(skylark src/main.c)
add_library(glad deps/glad/src/glad.c)
add_library(tinycthread deps/glfw/deps/tinycthread.c)
set(INC_DIRS List deps/glad/include/ deps/glfw/deps/)
include_directories(glad PRIVATE ${INC_DIRS})

set_property(TARGET skylark PROPERTY CXX_STANDARD 17)
target_link_libraries(skylark glfw glad tinycthread)
